--- a/templates/qr.html
+++ b/templates/qr.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Your QR Code</title>
     <style>
         body {width: 100%;}
         .main-body__title {color: #F5F5F5; text-align: center; display: block; font-size: 20px; margin: 10px 0;}
